fixed overflows for mobile

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -26,4 +26,5 @@ body {
 		--form-accent-color: color(Purple);
 		--form-body-focus: color(Blue);
 	}
+	-webkit-overflow-scrolling: touch;
 }
